<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnfunbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="srvikram13.fitnfun.NewGameActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:contentDescription="@string/fit_n_fun_logo"
        android:src="@drawable/logo_with_name_horizontal"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/selectGameTypeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_game_type" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnSinglePlayer"
            style="@style/btnBlock"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_single_player"
            android:paddingTop="30dp"
            android:text="@string/go_solo"></Button>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/btnMultiPlayer"
            style="@style/btnBlock"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_multi_player"
            android:text="@string/play_with_friends"></Button>

        <TextView
            style="@style/h4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer_tip" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btnDismiss"
            style="@style/btnMedium"
            android:layout_width="wrap_content"
            android:text="@string/back"></Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectPlayersScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_players" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            style="@style/editableField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="text"
            android:text="@string/username" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <EditText
                style="@style/editableField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/enter_player_two" />

            <Button
                android:id="@+id/btnAddMore"
                style="@style/btnCancel"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/more"
                android:textSize="16sp"></Button>
        </LinearLayout>

        <Button
            android:id="@+id/btnDismissAgain"
            style="@style/btnBlock"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/start_game"></Button>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                style="@style/btnCancel"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"></Button>

            <Button
                android:id="@+id/btnDismissOnceAgain"
                style="@style/btnDefault"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="3"
                android:text="@string/back_to_main_menu"></Button>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>