<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnfunbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="srvikram13.fitnfun.HomeActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:src="@drawable/logo_with_name_horizontal"
        android:textAlignment="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnProfile"
                style="@style/btnBlock"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/ic_profile"
                android:paddingBottom="20dp"
                android:text="@string/profile"></Button>

            <Button
                android:id="@+id/btnScoreboard"
                style="@style/btnBlock"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/ic_scoreboard"
                android:text="@string/scoreboard"></Button>

            <Button
                android:id="@+id/btnNewGame"
                style="@style/btnBlock"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/ic_new_game"
                android:text="@string/new_game"></Button>

            <Button
                android:id="@+id/btnHelpTutorial"
                style="@style/btnBlock"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/ic_help_tutorial"
                android:text="@string/help_tutorial"></Button>

            <Button
                android:id="@+id/btnAbout"
                style="@style/btnBlock"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/ic_about"
                android:text="@string/about"></Button>

        </LinearLayout>
    </ScrollView>
</LinearLayout>