<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnfunbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="srvikram13.fitnfun.ScoreCardActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:contentDescription="@string/fit_n_fun_logo"
        android:src="@drawable/logo_with_name_horizontal"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        style="@style/h1"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scorecard"
        style="@style/h2"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vikram Deshmukh"
                android:textAlignment="textStart"
                style="@style/score"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90"
                android:textAlignment="textEnd"
                style="@style/score"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:textAlignment="textStart"
                style="@style/score"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90"
                android:textAlignment="textEnd"
                style="@style/highScore"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vikram Won!"
        style="@style/winner"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            style="@style/btnCancel"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"></Button>

        <Button
            android:id="@+id/btnDismissOnceAgain"
            style="@style/btnMedium"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:text="@string/play_again"></Button>
    </LinearLayout>
</LinearLayout>