<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnfunbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="srvikram13.fitnfun.GameActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:contentDescription="@string/fit_n_fun_logo"
        android:src="@drawable/logo_with_name_horizontal"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining"
        style="@style/h4"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/countdownTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="60"
        style="@style/h0"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/nextChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/h2"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimaryText"
        android:textAllCaps="false"
        android:padding="10dp"
        android:text="Jump on the spot 10 times and dance like a monkey."/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnEndGame"
        style="@style/btnBlock"
        android:layout_width="match_parent"
        android:text="@string/end_game"
        ></Button>
</LinearLayout>