<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fitnfunbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="srvikram13.fitnfun.view.ScoreBoardActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:contentDescription="@string/fit_n_fun_logo"
        android:src="@drawable/logo_with_name_horizontal"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        android:gravity="center_horizontal"
        style="@style/h1"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorTextSecondary60"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/5/2016 13:!4"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h2"
                    android:text="Vikram D"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="100"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:textSize="28dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest Level: 14"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="⇓Multiplayer"
                    android:background="@color/colorPrimary20"
                    style="@style/h6"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorTextSecondary60"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/5/2016 13:!4"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h2"
                    android:text="Vikram D"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="100"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:textSize="28dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest Level: 14"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="⇓Multiplayer"
                    android:background="@color/colorPrimary20"
                    style="@style/h6"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorTextSecondary60"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/5/2016 13:!4"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h2"
                    android:text="Vikram D"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="100"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:textSize="28dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest Level: 14"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="⇓Multiplayer"
                    android:background="@color/colorPrimary20"
                    style="@style/h6"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorTextSecondary60"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/5/2016 13:!4"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h2"
                    android:text="Vikram D"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="100"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:textSize="28dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest Level: 14"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="⇓Multiplayer"
                    android:background="@color/colorPrimary20"
                    style="@style/h6"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorTextSecondary60"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/5/2016 13:!4"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/h2"
                    android:text="Vikram D"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/score"
                    android:text="100"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:textSize="28dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Highest Level: 14"
                    style="@style/h6"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="⇓Multiplayer"
                    android:background="@color/colorPrimary20"
                    style="@style/h6"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"/>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard"
        style="@style/h1"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            style="@style/btnCancel"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"></Button>

        <Button
            android:id="@+id/btnDismissOnceAgain"
            style="@style/btnMedium"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:text="@string/play_again"></Button>
    </LinearLayout>
</LinearLayout>